--- a/index.html
+++ b/index.html
@@ -5,150 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover premium health and wellness products at Kynliv. Transform your well-being with innovative solutions.">
     <title>Kynliv - Home</title>
-    
-    <!-- Link to Google Fonts -->
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto&display=swap" rel="stylesheet">
-    
-    <!-- External CSS for layout and design -->
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
-        }
 
-        /* Header and Navigation Styling */
-        header {
-            background-color: #0a3d62;
-            padding: 20px;
-            text-align: center;
-            color: white;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #2c3e50;
-            padding: 10px 0;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            font-weight: bold;
-        }
-        nav a:hover {
-            background-color: #f39c12;
-            color: black;
-        }
+    <!-- Animate.css for animations -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-        /* Hero Section */
-        .hero {
-            background: url('hero-image.jpg') no-repeat center center/cover;
-            height: 400px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
-        }
-        .hero h1 {
-            font-size: 3em;
-            margin: 0;
-        }
-        .hero p {
-            font-size: 1.5em;
-            margin: 10px 0;
-        }
-        .cta-button {
-            background-color: #f39c12;
-            padding: 15px 30px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            border-radius: 5px;
-        }
-        .cta-button:hover {
-            background-color: #e67e22;
-        }
+    <!-- Swiper.js for slider -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 
-        /* Products Section */
-        .section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-        .products {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-        .product-card {
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 30%;
-            margin: 20px;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: left;
-        }
-        .product-card img {
-            width: 100%;
-            border-radius: 5px;
-        }
-        .product-card h3 {
-            margin-top: 10px;
-            font-size: 1.5em;
-        }
-        .product-card p {
-            margin-bottom: 10px;
-            font-size: 1em;
-        }
-
-        /* Testimonials Section */
-        .testimonials {
-            background-color: #ecf0f1;
-            padding: 60px 20px;
-            text-align: center;
-        }
-        .testimonial {
-            margin: 20px;
-            font-style: italic;
-        }
-        .testimonial h4 {
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        /* Footer Section */
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            padding: 40px 20px;
-            text-align: center;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .products {
-                flex-direction: column;
-            }
-            .product-card {
-                width: 80%;
-                margin: 20px auto;
-            }
-        }
-    </style>
+    <!-- External CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <!-- Header -->
 <header>
-    <h1>Welcome to Kynliv</h1>
-    <p>Discover premium wellness products</p>
+    <h1 class="animate__animated animate__fadeInDown">Welcome to Kynliv</h1>
+    <p class="animate__animated animate__fadeInUp">Discover premium wellness products</p>
 </header>
 
-<!-- Navigation -->
+<!-- Navigation with Smooth Scroll -->
 <nav>
     <a href="#products">Products</a>
     <a href="#testimonials">Testimonials</a>
@@ -156,12 +34,29 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<!-- Hero Section -->
+<!-- Hero Slider (Swiper.js) -->
 <section class="hero">
-    <div>
-        <h1>Empower Your Health</h1>
-        <p>Revolutionary Products for a Healthier You</p>
-        <a href="#products" class="cta-button">Shop Now</a>
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide" style="background-image:url('hero-image1.jpg');">
+                <div class="overlay">
+                    <h1>Empower Your Health</h1>
+                    <p>Revolutionary Products for a Healthier You</p>
+                    <a href="#products" class="cta-button">Shop Now</a>
+                </div>
+            </div>
+            <div class="swiper-slide" style="background-image:url('hero-image2.jpg');">
+                <div class="overlay">
+                    <h1>Wellness Redefined</h1>
+                    <p>Find Your Balance with Our Products</p>
+                    <a href="#products" class="cta-button">Explore More</a>
+                </div>
+            </div>
+        </div>
+        <!-- Slider Navigation -->
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
     </div>
 </section>
 
@@ -169,17 +64,17 @@
 <section class="section" id="products">
     <h2>Our Products</h2>
     <div class="products">
-        <div class="product-card">
+        <div class="product-card animate__animated animate__fadeInUp">
             <img src="product1.jpg" alt="Product 1">
             <h3>Product 1</h3>
             <p>Discover the benefits of our leading wellness product.</p>
         </div>
-        <div class="product-card">
+        <div class="product-card animate__animated animate__fadeInUp" style="animation-delay: 0.2s;">
             <img src="product2.jpg" alt="Product 2">
             <h3>Product 2</h3>
             <p>Improve your vitality with our best-selling solution.</p>
         </div>
-        <div class="product-card">
+        <div class="product-card animate__animated animate__fadeInUp" style="animation-delay: 0.4s;">
             <img src="product3.jpg" alt="Product 3">
             <h3>Product 3</h3>
             <p>Experience premium health with our innovative products.</p>
@@ -189,12 +84,12 @@
 
 <!-- Testimonials Section -->
 <section class="testimonials" id="testimonials">
-    <h2>What Our Customers Say</h2>
-    <div class="testimonial">
+    <h2 class="animate__animated animate__fadeIn">What Our Customers Say</h2>
+    <div class="testimonial animate__animated animate__fadeInLeft">
         <p>"Kynliv's products have transformed my life. I feel healthier and more energetic!"</p>
         <h4>- Sarah J.</h4>
     </div>
-    <div class="testimonial">
+    <div class="testimonial animate__animated animate__fadeInRight">
         <p>"After using Kynliv, I can see a noticeable difference in my well-being. Highly recommended!"</p>
         <h4>- Michael T.</h4>
     </div>
@@ -206,5 +101,43 @@
     <p>Contact us: info@kynliv.com | (123) 456-7890</p>
 </footer>
 
+<!-- Swiper.js Script -->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<!-- jQuery for smooth scrolling -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Custom JS -->
+<script>
+    // Swiper.js for slider
+    var swiper = new Swiper('.swiper-container', {
+        slidesPerView: 1,
+        loop: true,
+        autoplay: {
+            delay: 5000,
+        },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+    });
+
+    // Smooth scrolling
+    $('nav a').on('click', function(event) {
+        if (this.hash !== '') {
+            event.preventDefault();
+            var hash = this.hash;
+            $('html, body').animate({
+                scrollTop: $(hash).offset().top
+            }, 800, function(){
+                window.location.hash = hash;
+            });
+        }
+    });
+</script>
 </body>
 </html>
